modified dummy app styles fixed alignment issues with the icons

--- a/addon/styles/addon.less
+++ b/addon/styles/addon.less
@@ -1,12 +1,14 @@
 & {
     .calendar-button .cal-export-content a {
-        display: block;
+        display: flex;
+        align-items: center;
     }
     .calendar-button .cal-export-content .app-icon {
-        height: 14px;
-        width: 18px;
+        height: 18px;
+        width: 14px;
         float: left;
         margin-right: 5px;
+        vertical-align: middle;
     }
     .calendar-button .cal-export-content .google-app-icon {
         background:url('/images/google-icon.png');
